--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,21 +10,23 @@
         android:id="@+id/textViewFrom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="53dp"
         android:text="@string/from"
         android:textSize="21sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView1"
         app:layout_constraintEnd_toEndOf="@+id/textView1"
-        app:layout_constraintStart_toStartOf="@+id/textView1" />
+        app:layout_constraintStart_toStartOf="@+id/textView1"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:text="@string/time_not_selected"
         android:textSize="21sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonSelectFirstTime"
         app:layout_constraintEnd_toEndOf="@+id/buttonSelectFirstTime"
-        app:layout_constraintStart_toStartOf="@+id/buttonSelectFirstTime" />
+        app:layout_constraintStart_toStartOf="@+id/buttonSelectFirstTime"
+        app:layout_constraintTop_toBottomOf="@+id/textViewFrom" />
 
     <Button
         android:id="@+id/buttonSelectFirstTime"
@@ -32,22 +34,22 @@
         android:layout_height="48dp"
         android:layout_marginStart="78dp"
         android:layout_marginEnd="78dp"
-        android:layout_marginBottom="64dp"
         android:onClick="showFirstTimePickerDialog"
         android:text="@string/select_first_time"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
     <TextView
         android:id="@+id/textViewTo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="@string/to"
         android:textSize="21sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2" />
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSelectFirstTime" />
 
     <TextView
         android:id="@+id/textView2"
@@ -55,9 +57,9 @@
         android:layout_height="wrap_content"
         android:text="@string/time_not_selected"
         android:textSize="21sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonSelectSecondTime"
         app:layout_constraintEnd_toEndOf="@+id/buttonSelectSecondTime"
-        app:layout_constraintStart_toStartOf="@+id/buttonSelectSecondTime" />
+        app:layout_constraintStart_toStartOf="@+id/buttonSelectSecondTime"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTo" />
 
     <Button
         android:id="@+id/buttonSelectSecondTime"
@@ -65,34 +67,33 @@
         android:layout_height="48dp"
         android:layout_marginStart="78dp"
         android:layout_marginEnd="78dp"
-        android:layout_marginBottom="48dp"
         android:onClick="showSecondTimePickerDialog"
         android:text="@string/select_second_time"
-        app:layout_constraintBottom_toTopOf="@+id/textViewResult"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textViewResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        android:textSize="24sp"
+        android:layout_marginTop="48dp"
+        android:textSize="21sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCalculate"
         app:layout_constraintEnd_toEndOf="@+id/buttonCalculate"
-        app:layout_constraintStart_toStartOf="@+id/buttonCalculate" />
+        app:layout_constraintStart_toStartOf="@+id/buttonCalculate"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSelectSecondTime" />
 
     <Button
         android:id="@+id/buttonCalculate"
         android:layout_width="255dp"
         android:layout_height="48dp"
         android:layout_marginStart="78dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="78dp"
-        android:layout_marginBottom="128dp"
         android:text="@string/calculate"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewResult" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
